<resources>
    <string name="app_name">PianoGrupo01</string>
    <string name="logo">Logo</string>
    <string name="foto_jorge">Foto_Jorge</string>
    <string name="jorge">Jorge Francisco Cisneros Zometa</string>
    <string name="foto_esme">Foto_esme</string>
    <string name="esme">Esmeralda Noemi García Borja</string>
    <string name="foto_fer">Foto_fer</string>
    <string name="fernando">Fernando Ulises Gómez Herrera</string>
    <string name="c">Do</string>
    <string name="d">Re</string>
    <string name="e">Mi</string>
    <string name="f">Fa</string>
    <string name="g">Sol</string>
    <string name="a">La</string>
    <string name="b">Si</string>
    <string name="cOc">Do</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_1">1</string>

    <string name="Exit">Salir</string>
    <string name="about_us">Acerca de nosotros</string>
    <string name="change_piano">Cambiar Tipo de Piano</string>
    <string name="fa">Fa</string>
    <string name="re">re</string>
    <string name="reeeee">re</string>
    <string name="mi">Mi</string>
    <string name="ee">re</string>
    <string name="notare">Re</string>
    <string name="sol">Sol</string>
    <string name="si">Si</string>
    <string name="textview">TextView</string>
    <string name="intengrantes_del_equipo">INTENGRANTES DEL EQUIPO</string>
</resources>